# Vireo

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LEGEND.md  NOTICE  README.md  ROADMAP.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
Research Docs/: impact-of-reaction-diffusion-and-chemotaxis-on-ecosystem-dynamics.md
crates/vireo-app/: Cargo.toml
crates/vireo-app/shaders/: field_bg.wgsl  render.wgsl
crates/vireo-app/src/: main.rs  renderer.rs  viewer.rs
crates/vireo-core/: Cargo.toml
crates/vireo-core/src/: lib.rs
crates/vireo-core/src/gpu/: device.rs  layouts.rs  mod.rs  pipelines.rs  textures.rs
crates/vireo-core/src/shaders/: agent_step.wgsl  clear_occupancy.wgsl  mod.rs  rd_step.wgsl
crates/vireo-core/src/sim/: agents.rs  fields.rs  mod.rs  params.rs
crates/vireo-core/tests/: seeding.rs
crates/vireo-headless/: Cargo.toml
crates/vireo-headless/src/: main.rs  metrics.rs  snapshots.rs
crates/vireo-params/: Cargo.toml
crates/vireo-params/src/: lib.rs
docs/: wgsl-bindings.md
lab/analysis/: requirements.txt  visualize_results.py
lab/configs/: best-demo.yaml
results/: agents_0000.csv  metrics.csv
shaders/: diffuse.wgsl  emissions.wgsl  particles.wgsl  render.wgsl
src/: main.rs
