[package]
name = "vireo"
version = "0.1.0"
edition = "2021"
authors = ["You <you@example.com>"]
license = "MIT"
description = "An interactive ecosystem sandbox built on a custom GPU engine with diffusion fields and emergent behavior simulation."

[dependencies]
wgpu = "0.19"
winit = "0.29"
pollster = "0.3"
bytemuck = { version = "1.15", features = ["derive"] }
glam = "0.27"
rand = "0.8"
env_logger = "0.11"

# Optional (fast math on nightly can be enabled by users if desired)
