[workspace]
members = [
    "crates/vireo-core",
    "crates/vireo-headless", 
    "crates/vireo-app"
]

[workspace.dependencies]
wgpu = "0.19"
bytemuck = { version = "1.15", features = ["derive"] }
glam = "0.27"
rand = "0.8"
rand_chacha = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
half = "2.2"
