[package]
name = "vireo-core"
version = "0.2.0"
edition = "2021"
authors = ["Human <human@example.com>"]
license = "MIT"
description = "Core Vireo engine: fields, agents, shaders, and GPU compute"
repository = "https://github.com/human/Vireo"

[dependencies]
wgpu = { workspace = true }
bytemuck = { version = "1.15", features = ["derive"] }
glam = { workspace = true }
rand = "0.8"
rand_chacha = "0.3"
half = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
vireo-params = { path = "../vireo-params", features = ["serde"] }
