[package]
name = "vireo-headless"
version = "0.2.0"
edition = "2021"
authors = ["Human <human@example.com>"]
license = "MIT"
description = "Headless CLI runner for Vireo ecosystem experiments"
repository = "https://github.com/human/Vireo"

[dependencies]
vireo-core = { path = "../vireo-core" }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = { workspace = true }
rand_chacha = { workspace = true }
clap = { version = "4.0", features = ["derive"] }
image = "0.24"
csv = "1.3"
anyhow = "1"
wgpu = { workspace = true }
pollster = "0.3"
bytemuck = "1.15"
