[package]
name = "vireo-params"
version = "0.1.0"
edition = "2021"
description = "Shared parameter types for Vireo ecosystem simulation"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }
bytemuck = { version = "1.0", features = ["derive"] }
log = "0.4"

[features]
default = []
serde = ["dep:serde"]
